# django-flexi-settings

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  setup.py
flexi_settings/: __init__.py  loaders.py  settings.py
