[tool.poetry]
name = "django-flexi-settings"
version = "0.1.2"
description = "Utilities for flexible configuration for Django."
authors = ["Matt Pryor <matt.pryor@stfc.ac.uk>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/cedadev/django-flexi-settings"
keywords = ["django", "flexible", "settings"]

[tool.poetry.plugins."flexi_settings.loaders"]
python = "flexi_settings.loaders:load_python"
yaml = "flexi_settings.loaders:load_yaml"
json = "flexi_settings.loaders:load_json"

[tool.poetry.dependencies]
python = "^3.6"
pyyaml = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
